--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "coffee ./bin/server.coffee"
+    "start": "./bin/serve"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
